chore: corrige base para github pages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
 
-  "homepage": "https://SEU_USUARIO.github.io/financeiro",
+  "homepage": "https://vinicius2505-Oliveira.github.io/financeiro",
 
   "scripts": {
     "dev": "vite",
